add get_waterflow, head_flag checker, and drinking checker

--- a/cls_config/cls_python.ini
+++ b/cls_config/cls_python.ini
@@ -1,10 +1,13 @@
 [MAIN]
 result_drive = C:
-result_dir = ${result_drive}\BISE\result
-environmental_log_path = ${result_dir}\env_data.txt
-water_log_path = ${result_dir}\waterlog.txt
+result_dir = %(result_drive)s\BISE\cls_python\result
+environmental_log_path = %(result_dir)s\env_data.txt
+water_log_path = %(result_dir)s\waterlog.txt
 daytime_limit = 18
 nighttime_limit = 6
+cameragap = 65
+headwidth = 40
+flowmeter_threshold = 2
 
 [ID]
 image_prefix = id
