add function to save environmental and waterlog data into csv format

--- a/cls_config/cls_python.ini
+++ b/cls_config/cls_python.ini
@@ -1,13 +1,16 @@
 [MAIN]
 result_drive = C:
 result_dir = %(result_drive)s\BISE\cls_python\result
-environmental_log_path = %(result_dir)s\env_data.txt
-water_log_path = %(result_dir)s\waterlog.txt
+environmental_log_path = %(result_dir)s\env_data.csv
+flowmeter_log_path = %(result_dir)s\flowmeter_data.csv
 daytime_limit = 18
 nighttime_limit = 6
 cameragap = 65
 headwidth = 40
 flowmeter_threshold = 2
+environmental_check_period = 600
+image_capture_period = 10
+cleaning period = 10
 
 [ID]
 image_prefix = id
