adding recovery mechanism for camera

--- a/cls_config/cls_python.ini
+++ b/cls_config/cls_python.ini
@@ -2,6 +2,8 @@
 device_name = WA-02
 result_drive = C:
 cls_server_url = http://localhost:5000
+cls_user = user
+cls_pass = pass
 result_dir = %(result_drive)s\BISE\cls_python\cls_result
 environmental_log_path = %(result_dir)s\env_data.csv
 flowmeter_log_path = %(result_dir)s\flowmeter_data.csv
