--- a/cls_config/cls_logging.ini
+++ b/cls_config/cls_logging.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,simpleExample
+keys=root
 
 [handlers]
 keys=consoleHandler
@@ -8,14 +8,8 @@ keys=consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler
-
-[logger_simpleExample]
-level=DEBUG
-handlers=consoleHandler
-qualname=simpleExample
-propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
