add send_device_condition for device monitoring

--- a/cls_config/cls_python.ini
+++ b/cls_config/cls_python.ini
@@ -1,10 +1,12 @@
 [MAIN]
+device_name = WA-02
 result_drive = C:
-result_dir = %(result_drive)s\BISE\cls_python\result
+cls_server_url = http://localhost:5000
+result_dir = %(result_drive)s\BISE\cls_python\cls_result
 environmental_log_path = %(result_dir)s\env_data.csv
 flowmeter_log_path = %(result_dir)s\flowmeter_data.csv
-daytime_limit = 18
-nighttime_limit = 6
+daytime_limit = 19
+nighttime_limit = 5
 cameragap = 65
 headwidth = 40
 flowmeter_threshold = 2
