add config to show display

--- a/cls_config/cls_python.ini
+++ b/cls_config/cls_python.ini
@@ -18,9 +18,11 @@ cleaning period = 10
 
 [ID]
 image_prefix = id
+display = on
 
 [PL]
 image_prefix = pl
+display = on
 distance_const_a = -0.2651
 distance_const_b = -26.519
 distance_const_c = 64.118
@@ -30,6 +32,7 @@ led_const_c = 0.431
 
 [NOPL]
 image_prefix = nopl
+display = on
 distance_const_a = -1.3757
 distance_const_b = -25.253
 distance_const_c = 65.843
