update get_temperature and get_humidity based on new addapy implementation

--- a/cls_config/cls_python.ini
+++ b/cls_config/cls_python.ini
@@ -14,7 +14,7 @@ headwidth = 40
 flowmeter_threshold = 2
 environmental_check_period = 600
 image_capture_period = 10
-cleaning period = 10
+cleaning_period = 10
 
 [ID]
 image_prefix = id
@@ -41,8 +41,9 @@ led_const_b = 0.0504
 led_const_c = 0.631
 
 [TEMPERATURE]
-temp_const_a = 99.77221
-temp_const_b = -49.28702
+temp_const_a = 0
+temp_const_b = 99.77221
+temp_const_c = -49.28702
 
 [ILLUMINATION]
 illumi_const_a = 934.6479256
@@ -51,5 +52,6 @@ illumi_const_c = 1234.022163
 illumi_const_d = -217.4830
 
 [HUMIDITY]
-hum_const_a = 105.69433
-hum_const_b = 6.2141
+hum_const_a = 0
+hum_const_b = 105.69433
+hum_const_c = 6.2141
