add get_humidity with temperature

--- a/cls_config/cls_python.ini
+++ b/cls_config/cls_python.ini
@@ -52,6 +52,7 @@ illumi_const_c = 1234.022163
 illumi_const_d = -217.4830
 
 [HUMIDITY]
+with_temp = on
 hum_const_a = 0
 hum_const_b = 105.69433
 hum_const_c = 6.2141
